8239878: Bug in PrintEliminateAllocations code causes TestClhsdbJstackLock.java to fail

Reviewed-by: shade